config/samples/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: example-gateway
  annotations:
    kuadrant.io/gateway-cluster-label-selector: type=test
    mgc-sync-agent/all: 'true'
    mgc-syncer-patch/kind-mgc-workload-1: '[
      {"op": "replace", "path": "/spec/gatewayClassName", "value": "boo"},
      {"op": "replace", "path": "/spec/listeners/0/name", "value": "test"}
    ]'
spec:
  gatewayClassName: kuadrant-multi-cluster-gateway-instance-per-cluster
  listeners:
  - name: default
    port: 443
    protocol: HTTPS
    hostname: "myapp.dev.hcpapps.net"
    allowedRoutes:
      namespaces:
        from: All
