config/samples/gateway_istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio
  labels:
    istio: ingressgateway
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    port: 80
    protocol: HTTP
    hostname: "test.example.com"
    allowedRoutes:
      namespaces:
        from: All
