config/samples/gateway_unsupported_gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-unsupported-gateway
  annotations:
    kuadrant.io/gateway-cluster-label-selector: type=test
spec:
  gatewayClassName: some-unsupported-gatewayclass
  listeners:
  - name: test-listener-1
    port: 8443
    protocol: HTTPS
